feat: ui popover

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -58,6 +58,10 @@
         <i-lucide [img]="PaginationIcon" class="nav-icon"></i-lucide>
         Pagination
       </a>
+      <a routerLink="/popover" routerLinkActive="active">
+        <i-lucide [img]="MessageSquare" class="nav-icon"></i-lucide>
+        Popover
+      </a>
     </nav>
   </aside>
 
